--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Crocus-AI-Team/data-visualisation-tool"]
 	path = Crocus-AI-Team/data-visualisation-tool
 	url = https://github.com/Crocus-AI-Team/data-visualisation-tool.git
+[submodule "data-visualisation-tool"]
+	path = data-visualisation-tool
+	url = https://github.com/Crocus-AI-Team/data-visualisation-tool.git
